[package]
name = "r2rcon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = "=4.0.0"
once_cell = "1.18.0"
log = "0.4.19"
parking_lot = "0.12.1"
thiserror = "1.0.44"
retour = { version = "0.3.1", features = ["static-detour"] }
windows-sys = { version = "0.48.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Console"] }

[lib]
crate-type = ["cdylib"]
